--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,8 @@
     <string name="progression_bar_on_the_game_activity">・Progression bar on the game activity</string>
     <string name="cards_on_the_about_activity">・Cards on the about activity</string>
     <string name="additional_features">Additional features</string>
-    <string name="application_name_and_version_displayed_in_the_about_activity">・Application name and version displayed in the about activity</string>
+    <string name="application_name_and_version_displayed_in_the_about_activity">・Application ID and version displayed in the about activity</string>
     <string name="application">Application</string>
-    <string name="name">Name: ?</string>
+    <string name="id">ID: ?</string>
     <string name="version">Version: ?</string>
 </resources>
