--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -20,4 +20,7 @@
     <string name="application">Application</string>
     <string name="id">ID: ?</string>
     <string name="version">Version: ?</string>
+    <string name="nickname">Nickname</string>
+    <string name="score">Score</string>
+    <string name="level">Level</string>
 </resources>
