feat: menu management

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -25,4 +25,5 @@
     <string name="level">Niveau</string>
     <string name="correct_answer">Bonne réponse !</string>
     <string name="wrong_answer">Mauvaise réponse !</string>
+    <string name="questions">Questions: ?</string>
 </resources>
